src/main.css
:root {
  --primary: #61ab8f;
  --secondary: #61ab8f;
  --tertiary: #787878;
  --light-background: white;
  --dark-background: #333333;
  --red: #db6b77;
}

body {
  background-color: var(--light-background);
}

.call-to-action {
  background-color: var(--secondary);
  padding: 5px 30px;
  border: 4px solid var(--secondary);
  color: white;
}
.call-to-action:hover {
  border: 4px solid var(--tertiary);
}

.footer a {
  color: rgb(120, 120, 120);
}

.footer a:hover {
  color: rgb(190, 190, 190);
}

/* secondary */
.button-secondary {
  background-color: rgba(0, 0, 0, 0);
  padding: 5px 30px;
  color: var(--primary);
  /* niet */
  border: 0px solid var(--secondary);
}
.button-secondary:hover {
  color: var(--secondary);
}

